// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse course 1`] = `
Array [
  Array [
    Object {
      "classId": 2500,
      "description": "",
      "hour": 4,
      "subject": "CS",
      "type": "PLAIN_COURSE",
    },
    Object {
      "classId": 2500,
      "description": "",
      "hour": 4,
      "subject": "CS",
      "type": "PLAIN_COURSE",
    },
  ],
]
`;

exports[`parse or courses 1`] = `
Array [
  Array [
    Array [
      Object {
        "classId": 2500,
        "description": "",
        "hour": 4,
        "subject": "CS",
        "type": "PLAIN_COURSE",
      },
      Array [
        Object {
          "classId": 2501,
          "description": "",
          "hour": 1,
          "subject": "CS",
          "type": "OR_COURSE",
        },
        Object {
          "classId": 2501,
          "description": "",
          "hour": 1,
          "subject": "CS",
          "type": "OR_COURSE",
        },
      ],
    ],
  ],
]
`;
